refactor(AppConfig): AppConfig 도입